Adding mermaid code for use case figures

--- a/docs/1.Rendszerterv dokumentáció.MD
+++ b/docs/1.Rendszerterv dokumentáció.MD
@@ -165,13 +165,134 @@ A rendszerben két fő szereplőcsoportot különböztetünk meg:
 
 ### 5.2 Rendszerhasználati esetek és lefutásaik
 
-![Keresés](https://github.com/recept-projekt/dokumentacio/blob/main/images/rendszerhasznalati/kereses.png)
+```mermaid
+flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef social fill:#C71585,stroke:#FFB6C1,color:#fff;
 
-![Regisztráció](https://github.com/recept-projekt/dokumentacio/blob/main/images/rendszerhasznalati/regisztracio.png)
+    subgraph "Keresés folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Keresési feltételek megadása"]:::action
+        B --> C["Keresés az adatbázisban"]:::action
+        C --> D["Eredmények megjelenítése"]:::action
+        D --> E((Stop)):::startstop
+    end
+```
+```mermaid
+flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
 
-![Recept feltöltés](https://github.com/recept-projekt/dokumentacio/blob/main/images/rendszerhasznalati/recept_feltoltes.png)
+    subgraph "Regisztrációs folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Regisztrációs oldal megnyitása"]:::action
+        B --> C["Űrlap kitöltése"]:::action
+        C --> D{"Adatok érvényesek?"}:::decision
+        D -->|Nem| C:::error
+        D -->|Igen| E["Felhasználó mentése"]:::action
+        E --> F((Stop)):::startstop
+    end
+```
+```mermaid
+flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
 
-![Kommentelés](https://github.com/recept-projekt/dokumentacio/blob/main/images/rendszerhasznalati/kommenteles.png)
+    subgraph "Felhasználói adatok módosítása folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Profil adatok megjelenítése"]:::action
+        C --> D["Módosítási űrlap kitöltése"]:::action
+        D --> E{"Adatok érvényesek?"}:::decision
+        E -->|Nem| D:::error
+        E -->|Igen| F["Módosítás"]:::action
+        F --> G((Stop)):::startstop
+    end
+```
+```mermaid
+flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+
+    subgraph "Recept feltöltése folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Add recipe űrlap megnyitása"]:::action
+        C --> D["Adatok kitöltése"]:::action
+        D --> E{"Adatok érvényesek?"}:::decision
+        E -->|Nem| D:::error
+        E -->|Igen| F["Recept mentése"]:::action
+        F --> H((Stop)):::startstop
+    end
+```
+```mermaid
+    flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#2E8B57,stroke:#98FB98,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+
+    subgraph "Recept módosítása folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Saját receptek listázása"]:::action
+        C --> D["Recept kiválasztása"]:::action
+        D --> E{"Saját recept?"}:::decision
+        E -->|Nem| D:::error
+        E -->|Igen| F["Adatok kitöltése"]:::action
+        F --> G{"Adatok érvényesek?"}:::decision
+        G -->|Nem| F:::error
+        G -->|Igen| H["Módosítás"]:::action
+        H --> K((Stop)):::startstop
+    end
+```
+```mermaid
+    flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#C71585,stroke:#FFB6C1,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+
+    subgraph "Kommentelés folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Recept kiválasztása"]:::action
+        C --> D["Kommentelés"]:::action
+        D --> E{"Érvényes szöveg?"}:::decision
+        E -->|Nem| D:::error
+        E -->|Igen| F["Komment mentése"]:::action
+        F --> G["Komment megjelenítése"]:::action
+        G --> H((Stop)):::startstop
+    end
+```
+```mermaid
+    flowchart LR
+    classDef startstop fill:#1E90FF,stroke:#87CEFA,color:#fff,font-weight:bold;
+    classDef action fill:#C71585,stroke:#FFB6C1,color:#fff;
+    classDef decision fill:#DAA520,stroke:#FFD700,color:#000,font-weight:bold;
+    classDef error fill:#B22222,stroke:#FF7F7F,color:#fff;
+
+    subgraph "Értékelés folyamat"
+        direction LR
+        A((Start)):::startstop --> B["Bejelentkezés"]:::action
+        B --> C["Recept kiválasztása"]:::action
+        C --> D["Értékelés (1-5 csillag)"]:::action
+        D --> E{"Értékelt már korábban?"}:::decision
+        E -->|Nem| F["Értékelés mentése"]:::action
+        E -->|Igen| G["Értékelés frissítése"]:::action
+        G --> H["Átlag újraszámítása"]:::action
+        H --> I["Új átlag megjelenítése"]:::action
+        I --> J((Stop)):::startstop
+        F --> H
+    end
+```
 
 ### 5.3 Határ osztályok
 
