--- a/docs/1.Rendszerterv dokumentáció.MD
+++ b/docs/1.Rendszerterv dokumentáció.MD
@@ -398,10 +398,202 @@ Minden üzleti logikát és adatkezelést érintő változás szerver oldalon, a
 ### 9.1 Logikai adatmodell
 
 #### Egyed-Kapcsolat diagram
-![ER diagram](https://github.com/recept-projekt/dokumentacio/blob/main/images/ER_diagram.png)
+```mermaid
+flowchart LR
+    %% === ENTITÁSOK ===
+    USER[USER]
+    KATEGORIA[KATEGORIA]
+    RECEPT[RECEPT]
+    ALAPANYAG[ALAPANYAG]
+    HOZZAVALOK[HOZZÁVALÓK]
+    KOMMENT[KOMMENT]
+    KEDVENCEK[KEDVENCEK]
+
+    %% === USER attribútumok ===
+    uid(["<u>id</u>"])
+    uname(["neve"])
+    uemail(["email_cime"])
+    upass(["jelszava"])
+    upic(["kep_referencia"])
+
+    USER --- uid
+    USER --- uname
+    USER --- uemail
+    USER --- upass
+    USER --- upic
+
+    %% === KATEGORIA attribútumok ===
+    kid(["<u>id</u>"])
+    kname(["nev"])
+    KATEGORIA --- kid
+    KATEGORIA --- kname
+
+    %% === RECEPT attribútumok ===
+    rid(["<u>id</u>"])
+    ruser(["user_id"])
+    rcat(["kategoria_id"])
+    rname(["nev"])
+    rimg(["kep_referencia"])
+
+    RECEPT --- rid
+    RECEPT --- ruser
+    RECEPT --- rcat
+    RECEPT --- rname
+    RECEPT --- rimg
+
+    %% === ALAPANYAG attribútumok ===
+    aid(["<u>id</u>"])
+    aname(["neve"])
+    akal(["kaloria"])
+    afeherje(["feherje"])
+    aszenhidrat(["szenhidrat"])
+    azsir(["zsir"])
+    amertek(["mertekegyseg"])
+
+    ALAPANYAG --- aid
+    ALAPANYAG --- aname
+    ALAPANYAG --- akal
+    ALAPANYAG --- afeherje
+    ALAPANYAG --- aszenhidrat
+    ALAPANYAG --- azsir
+    ALAPANYAG --- amertek
+
+    %% === HOZZAVALOK attribútumok ===
+    hid(["<u>id</u>"])
+    hrecept(["recept_id"])
+    halap(["alapanyag_id"])
+    hmenny(["mennyiseg"])
+
+    HOZZAVALOK --- hid
+    HOZZAVALOK --- hrecept
+    HOZZAVALOK --- halap
+    HOZZAVALOK --- hmenny
+
+    %% === KOMMENT attribútumok ===
+    cid(["<u>id</u>"])
+    crecept(["recept_id"])
+    cuser(["user_id"])
+    cdatum(["datum"])
+    ctext(["szoveg"])
+    crate(["ertekeles"])
+
+    KOMMENT --- cid
+    KOMMENT --- crecept
+    KOMMENT --- cuser
+    KOMMENT --- cdatum
+    KOMMENT --- ctext
+    KOMMENT --- crate
+
+    %% === KEDVENCEK attribútumok ===
+    fid(["<u>id</u>"])
+    fuser(["user_id"])
+    frecept(["recept_id"])
+
+    KEDVENCEK --- fid
+    KEDVENCEK --- fuser
+    KEDVENCEK --- frecept
+
+    %% === KAPCSOLATOK (ROMBUSZOK) ===
+    R_IRJA{"írja"}
+    R_IR{"ír"}
+    R_KEDV{"kedvencel"}
+    R_TART{"tartalmaz"}
+    R_KAP{"kap"}
+    R_SZEREPEL{"szerepel"}
+    R_BESOR{"besorolva"}
+    R_HASZNAL{"használ"}
+
+    %% === KAPCSOLATOK BEKÖTÉSE ===
+    USER --- R_IRJA --- RECEPT
+    USER --- R_IR --- KOMMENT
+    USER --- R_KEDV --- KEDVENCEK
+
+    RECEPT --- R_TART --- HOZZAVALOK
+    RECEPT --- R_KAP --- KOMMENT
+    RECEPT --- R_SZEREPEL --- KEDVENCEK
+    RECEPT --- R_BESOR --- KATEGORIA
+
+    HOZZAVALOK --- R_HASZNAL --- ALAPANYAG
+```
 
 #### Adatbázis séma
-![Relációs séma](https://github.com/recept-projekt/dokumentacio/blob/main/images/relacios_sema.png)
+```mermaid
+erDiagram
+    %% === ENTITÁSOK ===
+    USER {
+        int id PK
+        string neve
+        string email_cime
+        string jelszava
+        string kep_referencia
+    }
+
+    KEDVENCEK {
+        int id PK
+        int user_id FK
+        int recept_id FK
+    }
+
+    KOMMENT {
+        int id PK
+        int recept_id FK
+        int user_id FK
+        date datum
+        string szoveg
+        int ertekeles
+    }
+
+    RECEPT {
+        int id PK
+        int user_id FK
+        int kategoria_id FK
+        string nev
+        string kep_referencia
+    }
+
+    HOZZAVALOK {
+        int id PK
+        int recept_id FK
+        int alapanyag_id FK
+        string mennyiseg
+    }
+
+    ALAPANYAG {
+        int id PK
+        string neve
+        float kaloria
+        float feherje
+        float szenhidrat
+        float zsir
+        string mertekegyseg
+    }
+
+    KATEGORIA {
+        int id PK
+        string nev
+    }
+
+    %% === KAPCSOLATOK ===
+    USER ||--o{ RECEPT : "írja"
+    USER ||--o{ KOMMENT : "ír"
+    USER ||--o{ KEDVENCEK : "kedvencel"
+
+    RECEPT ||--o{ HOZZAVALOK : "tartalmaz"
+    RECEPT ||--o{ KOMMENT : "kap"
+    RECEPT ||--o{ KEDVENCEK : "szerepel"
+    RECEPT o|--|| KATEGORIA : "besorolva"
+    HOZZAVALOK }o--|| ALAPANYAG : "használ"
+
+    %% === STÍLUSOK ===
+    style USER fill:#1E90FF,stroke:#87CEFA,stroke-width:1px,color:#fff
+    style RECEPT fill:#2E8B57,stroke:#98FB98,stroke-width:1px,color:#fff
+    style HOZZAVALOK fill:#3CB371,stroke:#90EE90,stroke-width:1px,color:#fff
+    style ALAPANYAG fill:#DAA520,stroke:#FFD700,stroke-width:1px,color:#fff
+    style KATEGORIA fill:#8B4513,stroke:#CD853F,stroke-width:1px,color:#fff
+    style KOMMENT fill:#B22222,stroke:#FF7F7F,stroke-width:1px,color:#fff
+    style KEDVENCEK fill:#C71585,stroke:#FFB6C1,stroke-width:1px,color:#fff
+
+```
 
 **Az adatbázis relációs sémái:**
 - User [ #id, neve, email_cime, jelszava, kep_referencia ]
