Changed ER from LR to TD for better result and changed DS text color to work on github light mode too

--- a/docs/1.Rendszerterv dokumentáció.MD
+++ b/docs/1.Rendszerterv dokumentáció.MD
@@ -399,7 +399,7 @@ Minden üzleti logikát és adatkezelést érintő változás szerver oldalon, a
 
 #### Egyed-Kapcsolat diagram
 ```mermaid
-flowchart LR
+flowchart TD
     %% === ENTITÁSOK ===
     USER[USER]
     KATEGORIA[KATEGORIA]
@@ -585,13 +585,13 @@ erDiagram
     HOZZAVALOK }o--|| ALAPANYAG : "használ"
 
     %% === STÍLUSOK ===
-    style USER fill:#1E90FF,stroke:#87CEFA,stroke-width:1px,color:#fff
-    style RECEPT fill:#2E8B57,stroke:#98FB98,stroke-width:1px,color:#fff
-    style HOZZAVALOK fill:#3CB371,stroke:#90EE90,stroke-width:1px,color:#fff
-    style ALAPANYAG fill:#DAA520,stroke:#FFD700,stroke-width:1px,color:#fff
-    style KATEGORIA fill:#8B4513,stroke:#CD853F,stroke-width:1px,color:#fff
-    style KOMMENT fill:#B22222,stroke:#FF7F7F,stroke-width:1px,color:#fff
-    style KEDVENCEK fill:#C71585,stroke:#FFB6C1,stroke-width:1px,color:#fff
+    style USER fill:#1E90FF,stroke:#87CEFA,stroke-width:1px,color:#ddd
+    style RECEPT fill:#2E8B57,stroke:#98FB98,stroke-width:1px,color:#ddd
+    style HOZZAVALOK fill:#3CB371,stroke:#90EE90,stroke-width:1px,color:#ddd
+    style ALAPANYAG fill:#DAA520,stroke:#FFD700,stroke-width:1px,color:#ddd
+    style KATEGORIA fill:#8B4513,stroke:#CD853F,stroke-width:1px,color:#ddd
+    style KOMMENT fill:#B22222,stroke:#FF7F7F,stroke-width:1px,color:#ddd
+    style KEDVENCEK fill:#C71585,stroke:#FFB6C1,stroke-width:1px,color:#ddd
 
 ```
 
